# valve.rs

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE.md  Makefile  README.md  confirm_overwrite.sh  expected_output.txt  requirements.txt  run_python.py
.github/workflows/: create-and-upload-artifacts.yml  create-release-assets.yml  valve-tests.yml
scripts/: export.py  export_messages.py  guess.py  guess_grammar.py  requirements.txt
src/: api.rs  api_test.rs  ast.rs  cli.rs  cmi_pb_grammar.lalrpop  column.tsv  guess.rs  internal.rs  lib.rs  main.rs  prefix.tsv  python_bindings.rs  rule.tsv  table.tsv  tests.rs  toolkit.rs  validate.rs  valve.rs  valve_grammar.lalrpop
src/ontology/: foobar.tsv  foreign_table.tsv  import.tsv  prefixes.tsv  terminology.tsv  upper.tsv
test/: generate_data.py  generate_random_test_data.py  generate_test_data.py  insert_update.sh  main.py  round_trip.sh  test_insert_update.sh  test_round_trip.sh
test/expected/: history.tsv  import.tsv  messages.tsv  messages_a1.tsv  messages_after_api_test.tsv  messages_pk.tsv  table10.tsv  table11.tsv  table2.tsv  table3.tsv  table6.tsv
test/expected/cli_test/: column1.tsv  column3.tsv  datatype1.tsv  table1_1.tsv  table1_2.tsv  table3.tsv
test/guess_test_data/: column.tsv  column_expected.tsv  datatype.tsv  rule.tsv  table.tsv  table_expected.tsv
test/penguins/: generate.py
test/penguins/src/data/: penguin.tsv
test/penguins/src/schema/: column.tsv  datatype.tsv  table.tsv
test/perf_test_data/: column.tsv  datatype.tsv  rule.tsv  table.tsv
test/perf_test_data/expected/: messages.tsv
test/perf_test_data/query_tests/: alternate_schema.sql  load_alternate_messages.py  query_tests.py
test/query_tests/: alternate_schema.sql  load_alternate_messages.py  query_tests.py
test/random_test_data/: column.tsv  table.tsv
test/src/: column.tsv  datatype.tsv  rule.tsv  table.tsv
test/src/ontology/: numeric.tsv  penguin.tsv  readonly1.tsv  readonly1_postgresql_create.sh  readonly1_postgresql_load.sh  readonly1_sqlite_create.sh  readonly1_sqlite_load.sh  readonly2.tsv  readonly3_postgresql_load.sql  readonly3_sqlite_create.sql  readonly3_sqlite_load.sql  table10.tsv  table11.tsv  table12.tsv  table13.tsv  table14.tsv  table15.tsv  table16.tsv  table2.tsv  table3.tsv  table4.tsv  table5.tsv  table6.tsv  table7.tsv  table8.tsv  table9.tsv  test_view_postgresql.sql  test_view_sqlite.sql  view1_postgresql.sql  view1_sqlite.sql  view2_postgresql.sh  view2_postgresql.sql  view2_sqlite.sh  view2_sqlite.sql  view3_postgresql.sql  view3_sqlite.sql
