[package]
name = "ontodev_valve"
description = "A lightweight validation engine written in rust"
license = "BSD-3-Clause"
version = "0.2.2"
repository = "https://github.com/ontodev/valve.rs"
edition = "2021"
build = "build.rs"

[build-dependencies]
lalrpop = { version = "0.19.9", features = ["lexer"] }

[dependencies]
argparse = "0.2.2"
async-std = { version = "1", features = [ "attributes" ] }
async-recursion = "1.0.4"
async-scoped = { version = "0.7.0", features = [ "use-async-std" ] }
chrono = "0.4.23"
crossbeam = "0.8.1"
csv = "1.1"
enquote = "1.1.0"
# Futures is not used directly but is needed for the python bindings in github.com/ontodev/valve.py.
futures = "0.3"
indexmap = "1.9.3"
indoc = "1.0"
itertools = "0.10.3"
lalrpop-util = { version = "0.19.7", features = ["lexer"] }
lazy_static = "1.4.0"
num_cpus = "1.13.1"
petgraph = "0.6.0"
rand = "0.8.5"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sqlx = { version = "0.6", features = [ "runtime-async-std-rustls", "any", "postgres", "sqlite" ] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
