[package]
name = "ontodev_valve"
description = "A lightweight validation engine written in rust"
license = "BSD-3-Clause"
version = "0.2.2"
repository = "https://github.com/ontodev/valve.rs"
edition = "2021"
build = "build.rs"

[build-dependencies]
lalrpop = { version = "0.19.9", features = ["lexer"] }

[dependencies]
anyhow = "1.0"
async-std = { version = "1", features = [ "attributes" ] }
async-recursion = "1.0"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
crossbeam = "0.8"
csv = "1.1"
enquote = "1.1"
env_logger = "0.10"
fix_fn = "1.0"
# Futures is not used directly but is needed for the python bindings in github.com/ontodev/valve.py.
futures = "0.3"
indexmap = { version = "1.9", features = [ "serde-1" ] }
indoc = "1.0"
is_executable = "1.0"
itertools = "0.10"
lalrpop-util = { version = "0.19", features = ["lexer"] }
lazy_static = "1.4"
lfu_cache = "1.3"
log = "0.4"
num_cpus = "1.16"
pad = "0.1"
petgraph = "0.6"
proceed = "0.1"
rand = "0.8"
rand_regex = "0.17"
regex = "1"
regex-syntax = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sprintf = "0.2"
sql_split = "0.1"
sqlx = { version = "0.6", features = [ "runtime-async-std-rustls", "any", "postgres", "sqlite" ] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
